# cafa-6-protein

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: DATA_DESCRIPTION.md  PROJECT_DESCRIPTION.md  RESEARCH_NOTES.md  SOLUTION_PLAN.md
scripts/: tier0_pipeline.py
src/cafa_6_protein/: __init__.py  cli.py  submission.py
src/cafa_6_protein/embeddings/: __init__.py  downloader.py  index.py
src/cafa_6_protein/evaluation/: __init__.py  metrics.py
src/cafa_6_protein/literature/: __init__.py  classifier.py  dataset.py  schemas.py
src/cafa_6_protein/models/: __init__.py  base.py  ensemble.py  frequency.py  knn.py  retrieval.py  schemas.py
src/cafa_6_protein/pubmed/: __init__.py  cache.py  extractor.py  ncbi.py  uniprot.py
tests/: __init__.py  conftest.py  test_data_loader.py  test_ensemble.py  test_frequency_baseline.py  test_go_extractor.py  test_goa_loader.py  test_knn_predictor.py  test_literature.py  test_literature_e2e.py  test_metrics.py  test_ncbi_client.py  test_ontology.py  test_pubmed_cache.py  test_retrieval_predictor.py  test_submission.py  test_uniprot_client.py
