[project]
name = "cafa-6-protein"
version = "0.1.0"
description = "CAFA 6 Protein Function Prediction Challenge"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "biopython>=1.83",
    "kaggle>=1.8.3",
    "networkx>=3.6.1",
    "obonet>=1.1.1",
    "h5py>=3.15.1",
    "typer>=0.21.1",
    "rich>=14.2.0",
    "cafaeval",
    "pyarrow>=23.0.0",
    "ahocorasick-rs>=1.0.3",
    "faiss-cpu>=1.7.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.scripts]
cafa6 = "cafa_6_protein.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pandas-stubs>=2.1.0",
    "pre-commit>=3.6.0",
]
classifier = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cafa_6_protein"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["cafa_6_protein"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "Bio.*",
    "sklearn.*",
    "typer.*",
    "cafaeval.*",
    "obonet.*",
    "networkx.*",
    "faiss.*",
    "ahocorasick.*",
    "torch.*",
    "transformers.*",
    "tqdm.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cafa_6_protein.cli"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "cafa_6_protein.literature.*"
disallow_subclassing_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/cafa_6_protein"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.uv.sources]
cafaeval = { git = "https://github.com/BioComputingUP/CAFA-evaluator.git" }

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
